[package]
name = "tts-urls"
authors = ["Jakob Hellermann"]
description = "Format URLs to retrieve audio from TTS (text to speech) services like Google Translate or VoiceRSS"
keywords = ["api"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jakobhellermann/tts-urls"
version = "0.3.0"

[dependencies]
percent-encoding = "2"
